--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron src/index.js"
+    "start": "electron src/index.js",
+    "package-win": "electron-packager .  --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=dist --version-string.CompanyName=TSS --version-string.FileDescription=TSS.Electron.Demo  --version-string.ProductName=\"TSS Electron Task List\"",
+    "package-linux": "electron-packager .  --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "asar": "^2.0.1",
     "dotenv": "^8.2.0",
     "electron": "^7.1.1"
   },
   "devDependencies": {
+    "electron-packager": "^14.1.0",
     "electron-reload": "^1.5.0"
   }
 }
